tests/NormalTests/paczka2/big_fuzzy/41492404.err
Error in line 2: E3pNvp4xSx A711 58,9
Error in line 6: 8Wf A226 0,3
Error in line 5: E3pNvp4xSx S448 74,4
Error in line 13: hrulcCnpUT S448 94,0
Error in line 4: 6yZ5PgDTes A711 288,1
Error in line 29: bj1lLzooh S448 85,5
Error in line 21: hrulcCnpUT A226 85,1
Error in line 43: ÍrulcCnpUT S448 26,7
Error in line 34: fWeez2Sw S448 74,0
Error in line 39: A226 A711 85,5
Error in line 40: hrulcCnpUT S448 74,1
Error in line 44: fWeez2Sw A474 62,2
Error in line 47: 6yZ5PgDTes A474 86,3
Error in line 58: A226 A226 65,6
Error in line 62: A226 A474 503,7
Error in line 60: E3pNvp4xSx A226 32,6
Error in line 79: hrulcCnpUT S448 25,7
Error in line 49: bj1lLzooh A226 1,4
Error in line 90: 6yZ5PgDTes A474 62,2
Error in line 118: fWeez2Sw S448 69,3
Error in line 120: hrulcCnpUT A711 184,03
Error in line 121: A226 A711 39,1
Error in line 119: fWeez2Sw A711 17,6
Error in line 124: A226 A226 66,8
Error in line 123: bj1lLzooh S448 206,3
Error in line 159: A226 A711 28,5
Error in line 161: A226 A474 53,0
Error in line 168: E3pNvp4xSx S448 58,5
Error in line 189: 8Wf S448 50,2
Error in line 180: A226 A474 47,9
Error in line 192: A226 S448 61,3
Error in line 200: E3pNvp4xSx A226 88,6
Error in line 202: E3pNvp4xSx A474 65,2
Error in line 209: 8Wf A226 152,2
Error in line 214: hrulcCnpUT A711 64,8
Error in line 187: 6yZ5PgDTes A226 82,2
Error in line 222: 8Wf S448 47,8
Error in line 178: fWeez2Sw S448 70,6
Error in line 235: E3pNvp4xSx S448 95,3
Error in line 242: fWeez2Sw A226 75,8
